--- a/register.html
+++ b/register.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,7 +11,9 @@
     <link rel="stylesheet" href="css/base.css">
     <!-- 引入页面的样式 -->
     <link rel="stylesheet" href="css/register.css">
+    <script src="js/register.js"></script>
 </head>
+
 <body>
     <div class="w">
         <header>
@@ -25,18 +28,21 @@
             <div class="reg_form">
                 <form action="">
                     <ul>
-                        <li><label for="">手机号：</label> <input type="text" class="inp">
-                            <span class="error"> <i class="error_icon"></i> 手机号码格式不正确，请从新输入 </span></li>
+                        <li><label for="">手机号：</label> <input type="text" class="inp" id="inptel" value="">
+                            <span id="tel" class="null"> <i class="success_icon " id="first_icon"></i>
+                                <p>请输入11位的手机号码</p>
+                            </span></li>
                         <li><label for="">短信验证码：</label> <input type="text" class="inp">
-                            <span class="success"> <i class="success_icon"></i> 短信验证码输入正确 </span></li>
+                            <span class="null"> <i class="success_icon"></i> 请输入短信验证码 </span></li>
                         <li><label for="">登录密码：</label> <input type="password" class="inp">
-                            <span class="error"> <i class="error_icon"></i> 手机号码格式不正确，请从新输入 </span></li>
-                        <li class="safe">安全程度 <em class="ruo">弱</em> <em class="zhong">中</em> <em class="qiang">强</em> </li>
+                            <span class="null"> <i class="success_icon"></i> 请输入密码 </span></li>
+                        <li class="safe">安全程度 <em class="ruo">弱</em> <em class="zhong">中</em> <em class="qiang">强</em>
+                        </li>
                         <li><label for="">确认密码：</label> <input type="password" class="inp">
-                            <span class="error"> <i class="error_icon"></i> 手机号码格式不正确，请从新输入 </span></li>
-                        <li class="agree"><input type="checkbox" name="" id=""> 
+                            <span class="null"> <i class="success_icon"></i> 请再次输入密码 </span></li>
+                        <li class="agree"><input type="checkbox" name="" id="">
                             同意协议并注册 <a href="#">《知晓用户协议》</a>
-                        
+
                         </li>
                         <li>
                             <input type="submit" value="完成注册" class="btn">
@@ -46,15 +52,18 @@
             </div>
         </div>
         <footer>
-            <div class="mod_copyright"> 
+            <div class="mod_copyright">
                 <div class="links">
-                    <a href="#">关于我们</a>|<a href="#">联系我们</a>|<a href="#">联系客服</a>|<a href="#">商家入驻</a>|<a href="#">营销中心</a>|<a href="#">手机品优购</a>|<a href="#">友情链接</a>|<a href="#">销售联盟</a>|<a href="#">品优购社区</a>|<a href="#">品优购公益</a>|<a href="#">English Site</a>|<a href="#">Contact U</a>
+                    <a href="#">关于我们</a>|<a href="#">联系我们</a>|<a href="#">联系客服</a>|<a href="#">商家入驻</a>|<a
+                        href="#">营销中心</a>|<a href="#">手机品优购</a>|<a href="#">友情链接</a>|<a href="#">销售联盟</a>|<a
+                        href="#">品优购社区</a>|<a href="#">品优购公益</a>|<a href="#">English Site</a>|<a href="#">Contact U</a>
                 </div>
                 <div class="copyright">
                     地址：重庆市九龙坡区 邮编：100000 电话：000-000-0000 传真：000-00000000 邮箱:2289976148@qq.com
                 </div>
             </div>
         </footer>
-    </div>    
+    </div>
 </body>
+
 </html>
