--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
             <li><a href="javascript:;">推荐</a></li>
             <li><a href="javascript:;">家用电器</a></li>
             <li><a href="javascript:;">手机通讯</a></li>
-            <li class="goback"><a href="#">返回顶部</a></li>
+            <li class="goback"><a href="javascript:;">返回顶部</a></li>
         </ul>
     </span>
     <!-- 推荐模块 -->
